--- a/500pxSesioPhotos1/DetailViewController.xib
+++ b/500pxSesioPhotos1/DetailViewController.xib
@@ -2,15 +2,16 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController">
             <connections>
                 <outlet property="detailImage" destination="ElZ-34-gGQ" id="BJA-Cv-Qiv"/>
-                <outlet property="infoCamera" destination="eSh-1g-Q2g" id="AMy-V0-OsM"/>
-                <outlet property="infoCountry" destination="BrR-gk-CVM" id="twZ-5Y-mmm"/>
+                <outlet property="infoCamera" destination="BrR-gk-CVM" id="3By-wX-xkO"/>
                 <outlet property="mapView" destination="f4m-sC-Hd5" id="6HH-Uq-4be"/>
+                <outlet property="nameUser" destination="eSh-1g-Q2g" id="CXr-qi-s1c"/>
                 <outlet property="photoDescription" destination="7mc-xm-8xT" id="OIp-1T-iNp"/>
                 <outlet property="photoName" destination="jG9-1Z-2f4" id="e7D-3q-fop"/>
                 <outlet property="userPicture" destination="JZy-HX-d56" id="vX8-1L-Fkh"/>
@@ -23,17 +24,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ElZ-34-gGQ">
-                    <rect key="frame" x="37" y="55" width="247" height="230"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jG9-1Z-2f4">
-                    <rect key="frame" x="0.0" y="293" width="320" height="27"/>
+                    <rect key="frame" x="37" y="55" width="247" height="223"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="27" id="Ifk-7o-VqY"/>
+                        <constraint firstAttribute="width" secondItem="ElZ-34-gGQ" secondAttribute="height" multiplier="247:223" id="4pQ-Rh-rjn"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </imageView>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mc-xm-8xT">
                     <rect key="frame" x="0.0" y="318" width="320" height="74"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,12 +51,21 @@
                 </mapView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSh-1g-Q2g">
                     <rect key="frame" x="8" y="512" width="109" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BrR-gk-CVM">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BrR-gk-CVM">
                     <rect key="frame" x="8" y="541" width="109" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="Fja-U9-49L"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jG9-1Z-2f4">
+                    <rect key="frame" x="0.0" y="286" width="320" height="27"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -69,29 +73,30 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="BrR-gk-CVM" secondAttribute="bottom" constant="6" id="0K5-aP-9u8"/>
-                <constraint firstItem="7mc-xm-8xT" firstAttribute="leading" secondItem="jG9-1Z-2f4" secondAttribute="leading" id="2bD-W1-XeS"/>
-                <constraint firstItem="BrR-gk-CVM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="58v-SI-Wfx"/>
+                <constraint firstAttribute="bottom" secondItem="7mc-xm-8xT" secondAttribute="bottom" constant="176" id="5sa-oQ-IE8"/>
                 <constraint firstItem="7mc-xm-8xT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="7Mx-jh-JcS"/>
-                <constraint firstItem="BrR-gk-CVM" firstAttribute="trailing" secondItem="eSh-1g-Q2g" secondAttribute="trailing" id="8SA-b1-Pyn"/>
-                <constraint firstItem="jG9-1Z-2f4" firstAttribute="top" secondItem="ElZ-34-gGQ" secondAttribute="bottom" constant="8" symbolic="YES" id="AZa-yt-Qhf"/>
-                <constraint firstItem="ElZ-34-gGQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="37" id="B8Y-fT-9al"/>
+                <constraint firstItem="BrR-gk-CVM" firstAttribute="top" secondItem="eSh-1g-Q2g" secondAttribute="bottom" constant="8" symbolic="YES" id="92d-em-8d8"/>
                 <constraint firstAttribute="bottom" secondItem="f4m-sC-Hd5" secondAttribute="bottom" constant="20" id="E7E-Xk-BHV"/>
+                <constraint firstItem="7mc-xm-8xT" firstAttribute="top" secondItem="jG9-1Z-2f4" secondAttribute="bottom" constant="5" id="EPf-3p-Ckr"/>
                 <constraint firstItem="f4m-sC-Hd5" firstAttribute="top" secondItem="JZy-HX-d56" secondAttribute="top" id="EuT-Mf-GsS"/>
                 <constraint firstItem="f4m-sC-Hd5" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailingMargin" id="HiB-wy-9j7"/>
+                <constraint firstItem="BrR-gk-CVM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="OGk-ke-lyi"/>
                 <constraint firstItem="JZy-HX-d56" firstAttribute="leading" secondItem="eSh-1g-Q2g" secondAttribute="leading" id="PA3-8k-cmB"/>
-                <constraint firstItem="f4m-sC-Hd5" firstAttribute="top" secondItem="jG9-1Z-2f4" secondAttribute="bottom" constant="80" id="aCP-gZ-kw4"/>
+                <constraint firstItem="jG9-1Z-2f4" firstAttribute="centerX" secondItem="ElZ-34-gGQ" secondAttribute="centerX" id="RAu-w2-avI"/>
+                <constraint firstItem="jG9-1Z-2f4" firstAttribute="trailing" secondItem="7mc-xm-8xT" secondAttribute="trailing" id="VX2-5c-Vdd"/>
+                <constraint firstItem="jG9-1Z-2f4" firstAttribute="leading" secondItem="7mc-xm-8xT" secondAttribute="leading" id="YI2-UT-H74"/>
+                <constraint firstItem="7mc-xm-8xT" firstAttribute="top" secondItem="ElZ-34-gGQ" secondAttribute="bottom" constant="40" id="at9-1P-2iK"/>
+                <constraint firstItem="ElZ-34-gGQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="37" id="c2f-CD-vdK"/>
                 <constraint firstItem="f4m-sC-Hd5" firstAttribute="leading" secondItem="JZy-HX-d56" secondAttribute="trailing" constant="27" id="dGr-Wh-eM3"/>
-                <constraint firstItem="7mc-xm-8xT" firstAttribute="trailing" secondItem="jG9-1Z-2f4" secondAttribute="trailing" id="f0n-PK-Yfg"/>
-                <constraint firstItem="eSh-1g-Q2g" firstAttribute="leading" secondItem="BrR-gk-CVM" secondAttribute="leading" id="gfm-vB-fbq"/>
+                <constraint firstItem="jG9-1Z-2f4" firstAttribute="top" secondItem="ElZ-34-gGQ" secondAttribute="bottom" constant="8" symbolic="YES" id="df6-R5-jwc"/>
+                <constraint firstItem="BrR-gk-CVM" firstAttribute="leading" secondItem="eSh-1g-Q2g" secondAttribute="leading" id="lOZ-yo-aMp"/>
                 <constraint firstItem="eSh-1g-Q2g" firstAttribute="top" secondItem="JZy-HX-d56" secondAttribute="bottom" constant="8" symbolic="YES" id="m4r-sp-0II"/>
-                <constraint firstItem="BrR-gk-CVM" firstAttribute="top" secondItem="eSh-1g-Q2g" secondAttribute="bottom" constant="8" symbolic="YES" id="m9U-hY-xgs"/>
-                <constraint firstItem="ElZ-34-gGQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="55" id="mjO-zP-U7Q"/>
-                <constraint firstItem="ElZ-34-gGQ" firstAttribute="centerX" secondItem="jG9-1Z-2f4" secondAttribute="centerX" id="p79-Ca-RUE"/>
+                <constraint firstItem="ElZ-34-gGQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="55" id="mZX-at-fDY"/>
                 <constraint firstAttribute="trailing" secondItem="7mc-xm-8xT" secondAttribute="trailing" id="qJg-gO-ul5"/>
                 <constraint firstItem="eSh-1g-Q2g" firstAttribute="trailing" secondItem="JZy-HX-d56" secondAttribute="trailing" id="rvO-Dr-60Y"/>
+                <constraint firstAttribute="bottom" secondItem="BrR-gk-CVM" secondAttribute="bottom" constant="6" id="vFO-1Z-CFO"/>
                 <constraint firstItem="JZy-HX-d56" firstAttribute="top" secondItem="7mc-xm-8xT" secondAttribute="bottom" constant="8" symbolic="YES" id="vUg-Y2-rAh"/>
-                <constraint firstItem="7mc-xm-8xT" firstAttribute="top" secondItem="ElZ-34-gGQ" secondAttribute="bottom" constant="33" id="zvz-AV-5tA"/>
+                <constraint firstItem="BrR-gk-CVM" firstAttribute="trailing" secondItem="eSh-1g-Q2g" secondAttribute="trailing" id="yxJ-QK-vBi"/>
             </constraints>
             <point key="canvasLocation" x="479" y="465"/>
         </view>
