--- a/resources/ui/TRGridVC.xib
+++ b/resources/ui/TRGridVC.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TRGridVC">
             <connections>
+                <outlet property="collectionView" destination="h7I-dU-Yg4" id="LiW-wF-EMk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,17 +15,27 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello RaRaRa!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Oq-Gj-BBb">
-                    <rect key="frame" x="104.5" y="274" width="111.5" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="h7I-dU-Yg4">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YFw-cd-Vou">
+                        <size key="itemSize" width="70" height="70"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="JAK-av-xYS"/>
+                        <outlet property="delegate" destination="-1" id="xdu-WY-B4k"/>
+                    </connections>
+                </collectionView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="5Oq-Gj-BBb" secondAttribute="centerY" id="DjB-TQ-2AP"/>
-                <constraint firstAttribute="centerX" secondItem="5Oq-Gj-BBb" secondAttribute="centerX" id="hHx-uX-ZMs"/>
+                <constraint firstAttribute="trailing" secondItem="h7I-dU-Yg4" secondAttribute="trailing" id="25h-LT-SQV"/>
+                <constraint firstItem="h7I-dU-Yg4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jbQ-Tw-DJW"/>
+                <constraint firstAttribute="bottom" secondItem="h7I-dU-Yg4" secondAttribute="bottom" id="tB1-3n-JiF"/>
+                <constraint firstItem="h7I-dU-Yg4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vh3-Wb-box"/>
             </constraints>
             <point key="canvasLocation" x="284" y="381"/>
         </view>
