Sets map info in detail view. Refs gradha/theranking-ios-candidates#5.

--- a/resources/ui/TRPhotoDetailVC.xib
+++ b/resources/ui/TRPhotoDetailVC.xib
@@ -95,7 +95,7 @@
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WwO-hu-tMb">
+                                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WwO-hu-tMb">
                                     <rect key="frame" x="8" y="239" width="304" height="200"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="200" id="ZN6-eN-RuF"/>
