--- a/resources/ui/TRGridVC.xib
+++ b/resources/ui/TRGridVC.xib
@@ -7,6 +7,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TRGridVC">
             <connections>
                 <outlet property="collectionView" destination="h7I-dU-Yg4" id="LiW-wF-EMk"/>
+                <outlet property="errorLabel" destination="WVi-WC-7SV" id="WfU-nu-LaM"/>
+                <outlet property="errorView" destination="LG3-KC-FrU" id="IIQ-jo-kB9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -29,10 +31,30 @@
                         <outlet property="delegate" destination="-1" id="xdu-WY-B4k"/>
                     </connections>
                 </collectionView>
+                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LG3-KC-FrU" userLabel="error holder">
+                    <rect key="frame" x="119" y="254" width="82" height="60.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="WVi-WC-7SV">
+                            <rect key="frame" x="20" y="20" width="42" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.77000000000000002" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="WVi-WC-7SV" firstAttribute="leading" secondItem="LG3-KC-FrU" secondAttribute="leading" constant="20" id="1vM-0p-mDa"/>
+                        <constraint firstItem="WVi-WC-7SV" firstAttribute="top" secondItem="LG3-KC-FrU" secondAttribute="top" constant="20" id="IcX-Ox-Jb0"/>
+                        <constraint firstAttribute="bottom" secondItem="WVi-WC-7SV" secondAttribute="bottom" constant="20" id="LlB-tU-tBF"/>
+                        <constraint firstAttribute="trailing" secondItem="WVi-WC-7SV" secondAttribute="trailing" constant="20" id="OYe-vJ-Wob"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="h7I-dU-Yg4" secondAttribute="trailing" id="25h-LT-SQV"/>
+                <constraint firstAttribute="centerX" secondItem="LG3-KC-FrU" secondAttribute="centerX" id="FFp-DV-sCt"/>
+                <constraint firstAttribute="centerY" secondItem="LG3-KC-FrU" secondAttribute="centerY" id="eQJ-HV-G3L"/>
                 <constraint firstItem="h7I-dU-Yg4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jbQ-Tw-DJW"/>
                 <constraint firstAttribute="bottom" secondItem="h7I-dU-Yg4" secondAttribute="bottom" id="tB1-3n-JiF"/>
                 <constraint firstItem="h7I-dU-Yg4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vh3-Wb-box"/>
